--- a/src/components/lyne-button/styles/lyne-button.component.scss
+++ b/src/components/lyne-button/styles/lyne-button.component.scss
@@ -4,55 +4,23 @@
 @include host-component-properties;
 
 :host {
-  display: block;
-
+  display: inline-block;
   @include buttonVariables();
-
 }
 
 .button--primary-negative {
-  @include buttonPrimaryNegativeVariables();
+  @include buttonPrimaryNegativeVariables;
 }
 
 .button--secondary {
-  @include buttonSecondaryVariables();
+  @include buttonSecondaryVariables;
 }
 
 .button--secondary-negative {
-  @include buttonSecondaryNegativeVariables();
+  @include buttonSecondaryNegativeVariables;
 }
 
-.button--tertiary {
-  --color-active-background: var(--color-white-default);
-  --color-active-border: var(--color-charcoal-default);
-  --color-active-text: var(--color-charcoal-default);
-  --color-default-background: var(--color-white-default);
-  --color-default-border: var(--color-granite-default);
-  --color-default-text: var(--color-granite-default);
-  --color-disabled-background: var(--color-black-alpha-10);
-  --color-disabled-border: var(--color-black-alpha-0);
-  --color-disabled-text: var(--color-white-default);
-  --color-hover-background: var(--color-white-default);
-  --color-hover-border: var(--color-black-default);
-  --color-hover-text: var(--color-black-default);
-}
-
-.button--tertiary-negative {
-  --color-active-background: transparent;
-  --color-active-border: var(--color-cloud-default);
-  --color-active-text: var(--color-cloud-default);
-  --color-default-background: transparent;
-  --color-default-border: var(--color-white-default);
-  --color-default-text: var(--color-white-default);
-  --color-disabled-background: transparent;
-  --color-disabled-border: var(--color-black-alpha-0);
-  --color-disabled-text: var(--color-white-alpha-60);
-  --color-hover-background: transparent;
-  --color-hover-border: var(--color-milk-default);
-  --color-hover-text: var(--color-milk-default);
-}
-
-.button--transparent {
+.button--translucent {
   --color-active-background: var(--color-black-alpha-70);
   --color-active-border: var(--color-black-alpha-0);
   --color-active-text: var(--color-cloud-default);
@@ -67,7 +35,7 @@
   --color-hover-text: var(--color-milk-default);
 }
 
-.button--transparent-negative {
+.button--translucent-negative {
   --color-active-background: var(--color-white-alpha-70);
   --color-active-border: var(--color-white-alpha-0);
   --color-active-text: var(--color-anthracite-default);
@@ -82,22 +50,38 @@
   --color-hover-text: var(--color-iron-default);
 }
 
-.button--small {
-  --border-width: var(--border-width-1x);
-  --min-height: var(--size-form-element-small-min-height);
-  --padding-block: var(--spacing-fixed-2x);
-  --padding-inline: var(--spacing-fixed-5x);
-
-  // TODO: missing design tokens
-  --font-size: 12;
+.button--transparent {
+  --color-active-background: var(--color-cloud-default);
+  --color-active-border: var(--color-cloud-default);
+  --color-active-text: var(--color-black-default);
+  --color-default-background: transparent;
+  --color-default-border: transparent;
+  --color-default-text: var(--color-black-default);
+  --color-disabled-background: transparent;
+  --color-disabled-border: transparent;
+  --color-disabled-text: var(--color-granite-default);
+  --color-hover-background: var(--color-milk-default);
+  --color-hover-border: var(--color-milk-default);
+  --color-hover-text: var(--color-black-default);
 }
 
-.button--icon-only {
-  --padding-inline: 0;
-  --icon-margin-inline-end: 0;
+.button--transparent-negative {
+  --color-active-background: var(--color-iron-default);
+  --color-active-border: var(--color-iron-default);
+  --color-active-text: var(--color-white-default);
+  --color-default-background: transparent;
+  --color-default-border: transparent;
+  --color-default-text: var(--color-white-default);
+  --color-disabled-background: transparent;
+  --color-disabled-border: transparent;
+  --color-disabled-text: var(--color-granite-default);
+  --color-hover-background: var(--color-charcoal-default);
+  --color-hover-border: var(--color-charcoal-default);
+  --color-hover-text: var(--color-white-default);
+}
 
-  width: pxToRem(var(--min-height));
-  justify-content: center;
+.button--size-m {
+  @include buttonSizeMVariables;
 }
 
 .button {
@@ -107,7 +91,7 @@
 .button--primary:not(:disabled),
 .button--secondary:not(:disabled),
 .button--primary-negative:not(:disabled) {
-  @include buttonShadowNotDisabled();
+  @include buttonShadowNotDisabled;
 }
 
 .button--visual-only {
@@ -115,12 +99,76 @@
   user-select: none;
 }
 
+.button--icon-only {
+  --padding-inline: 0;
+  --icon-margin-inline-end: 0;
+
+  width: pxToRem(var(--min-height));
+  justify-content: center;
+
+  &.button:disabled::after {
+    inset-inline: unset;
+    // Width of line through is fixed in icon variant
+    width: pxToRem(var(--icon-size));
+  }
+}
+
+.button:disabled {
+  color: var(--color-disabled-text);
+  cursor: default;
+
+  &::before {
+    background-color: var(--color-disabled-background);
+    border-color: var(--color-disabled-border);
+  }
+
+  // Line through content
+  &::after {
+    content: "";
+    @include absoluteCenterY;
+    background-color: var(--color-disabled-text);
+    height: pxToRem(var(--line-through-height-disabled));
+    inset-inline: pxToRem(var(--padding-inline));
+
+    @include ifForcedColors {
+      background-color: GrayText;
+    }
+  }
+
+  ::slotted(svg) {
+    @include ifForcedColors {
+      fill: GrayText;
+    }
+  }
+}
+
+.button:hover:not(:disabled) {
+  @include buttonHover;
+}
+
+.button:active:not(:disabled) {
+  @include buttonActive;
+}
+
+.button--secondary-negative,
+.button--translucent,
+.button--translucent-negative,
+.button--transparent,
+.button--transparent-negative {
+  @include buttonShadowDisabled;
+}
+
+.button__label,
+.button__icon {
+  @include buttonLabelTransition;
+}
+
 .button__label {
-  display: block;
+  @include buttonLabel;
 }
 
 .button__icon {
-  @include buttonIcon();
+  @include buttonIcon;
 }
 
 .button__icon-description {
@@ -132,43 +180,5 @@
 
   @include ifForcedColors {
     fill: ButtonText;
-  }
-
-}
-
-.button:disabled {
-  text-decoration: line-through;
-  color: var(--color-disabled-text);
-  background-color: var(--color-disabled-background);
-  border-color: var(--color-disabled-border);
-  cursor: default;
-
-  ::slotted(svg) {
-    @include ifForcedColors {
-      fill: GrayText;
-    }
-  }
-}
-
-.button:hover:not(:disabled),
-.button:focus:not(:disabled) {
-  @include buttonFocusAndHover();
-}
-
-.button:active:not(:disabled) {
-  @include buttonActive();
-}
-
-.button--secondary-negative,
-.button--tertiary,
-.button--tertiary-negative,
-.button--transparent,
-.button--transparent-negative {
-  box-shadow: none;
-
-  &:hover, &:focus {
-    &:not(:disabled) {
-      box-shadow: none;
-    }
   }
 }
