--- a/src/global/mixins/mixins_buttons.scss
+++ b/src/global/mixins/mixins_buttons.scss
@@ -16,12 +16,8 @@
 }
 
 @mixin buttonVariables {
-
-  // TODO: missing design tokens
-  --font-family: 'SBBWeb Bold';
-  --font-size: 14;
-  --letter-spacing: 0.01em;
-  --line-height: 1.428571428571429;
+  --icon-size: var(--size-icon-ui-small);
+  --line-through-height-disabled: var(--border-width-2x);
 
   // we use primary button styles as default values
   --color-active-background: var(--color-red150-default);
@@ -39,11 +35,11 @@
 
   --border-width: var(--border-width-2x);
   --border-radius: var(--border-radius-16x);
-  --min-height: var(--size-form-element-large-min-height);
-  --transition-duration: var(--animation-form-element-state-duration);
-  --transition-easing-function: var(--animation-form-element-state-easing);
-  --padding-block: var(--spacing-fixed-4x);
-  --padding-inline: var(--spacing-fixed-10x);
+  --min-height: var(--size-form-element-l-min-height);
+  --transition-duration: var(--animation-duration-2x);
+  --transition-easing-function: var(--animation-easing);
+  --padding-block-min: var(--spacing-fixed-1x);
+  --padding-inline: var(--spacing-fixed-8x);
   --gap: var(--spacing-fixed-2x);
 
   --shadow-1-default-color: var(--color-red-alpha-20);
@@ -68,6 +64,9 @@
   --shadow-2-hover-offset-y: 1;
   --shadow-2-hover-spread: 0;
 
+  @include mq($from: medium) {
+    --padding-inline: var(--spacing-fixed-10x);
+  }
 }
 
 @mixin buttonPrimaryNegativeVariables {
@@ -151,98 +150,144 @@
   --color-default-background: transparent;
   --color-default-border: var(--color-white-default);
   --color-default-text: var(--color-white-default);
-  --color-disabled-background: transparent;
+  --color-disabled-background: var(--color-black-alpha-10);
   --color-disabled-border: var(--color-black-alpha-0);
-  --color-disabled-text: var(--color-black-alpha-60);
+  --color-disabled-text: var(--color-aluminium-default);
   --color-hover-background: transparent;
   --color-hover-border: var(--color-milk-default);
   --color-hover-text: var(--color-milk-default);
 }
 
-@mixin buttonSmallVariables {
+@mixin buttonSizeMVariables {
   --border-width: var(--border-width-1x);
-  --min-height: var(--size-form-element-small-min-height);
-  --padding-block: var(--spacing-fixed-2x);
+  --min-height: var(--size-form-element-m-min-height);
   --padding-inline: var(--spacing-fixed-5x);
 
-  // TODO: missing design tokens
-  --font-size: 12;
+  @include mq($from: medium) {
+    --padding-inline: var(--spacing-fixed-8x);
+  }
 }
 
 @mixin button {
-
   @include buttonReset;
+  @include stretch(width);
+  @include text-xs--bold;
 
   position: relative;
   display: flex;
   gap: pxToRem(var(--gap));
   align-items: center;
+  justify-content: center;
+  text-align: left;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--transition-easing-function);
-  transition-property: background-color, color, border-color, box-shadow;
+  transition-property: color;
   min-height: pxToRem(var(--min-height));
-  border: pxToRem(var(--border-width)) solid var(--color-default-border);
   border-radius: pxToRem(var(--border-radius));
-  background-color: var(--color-default-background);
 
-  // when using short hand padding-block and padding-inline, safari will not
-  // evaluate the expression...
-  padding-block-start: pxToRem(calc(var(--padding-block) - var(--border-width)));
-  padding-block-end: pxToRem(calc(var(--padding-block) - var(--border-width)));
-  padding-inline-start: pxToRem(var(--padding-inline));
-  padding-inline-end: pxToRem(var(--padding-inline));
+  // The padding block value is only a minimal padding to preserve a padding if the content becomes larger than intended.
+  // Positioning of the content is made by flexbox vertical centering.
+  // The real padding displayed is larger than the defined value below.
+  padding-block: pxToRem(var(--padding-block-min));
+  padding-inline: pxToRem(var(--padding-inline));
   color: var(--color-default-text);
-  font-family: var(--font-family);
-  font-size: pxToRem(var(--font-size));
-  font-weight: normal;
-  letter-spacing: var(--letter-spacing);
-  line-height: var(--line-height);
   -webkit-font-smoothing: antialiased;
+  cursor: pointer;
 
-  &:before {
+  // Renders background and border in the background absolute to enable the hover animation
+  &::before {
     position: absolute;
-    content: '';
-    inset: pxToRem(calc(var(--border-width) * -1));
-    border-radius: pxToRem(var(--border-radius));
+    content: "";
+    inset: 0;
     border: pxToRem(var(--border-width)) solid var(--color-default-border);
-    z-index: -1;
+    border-radius: pxToRem(var(--border-radius));
+    background-color: var(--color-default-background);
+
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--transition-easing-function);
+    transition-property: inset, background-color, border-color, box-shadow;
+
+    @include visibleFocus;
+
+    @include ifForcedColors {
+      border: pxToRem(1) solid windowText;
+    }
   }
-
-  @include ifForcedColors {
-    border: pxToRem(1) solid windowText;
-  }
-
-  @include visibleFocus;
-
 }
 
 @mixin buttonShadowNotDisabled {
-  box-shadow:
-    pxToRem(var(--shadow-1-default-offset-x)) pxToRem(var(--shadow-1-default-offset-y)) pxToRem(var(--shadow-1-default-blur)) pxToRem(var(--shadow-1-default-spread)) var(--shadow-1-default-color),
-    pxToRem(var(--shadow-2-default-offset-x)) pxToRem(var(--shadow-2-default-offset-y)) pxToRem(var(--shadow-2-default-blur)) pxToRem(var(--shadow-2-default-spread)) var(--shadow-2-default-color);
+  &::before {
+    box-shadow: pxToRem(var(--shadow-1-default-offset-x))
+        pxToRem(var(--shadow-1-default-offset-y))
+        pxToRem(var(--shadow-1-default-blur))
+        pxToRem(var(--shadow-1-default-spread)) var(--shadow-1-default-color),
+      pxToRem(var(--shadow-2-default-offset-x))
+        pxToRem(var(--shadow-2-default-offset-y))
+        pxToRem(var(--shadow-2-default-blur))
+        pxToRem(var(--shadow-2-default-spread)) var(--shadow-2-default-color);
+  }
+}
+
+@mixin buttonShadowDisabled {
+  &::before {
+    box-shadow: none;
+  }
+
+  &:hover,
+  &:focus {
+    &:not(:disabled)::before {
+      box-shadow: none;
+    }
+  }
+}
+
+@mixin buttonHover {
+  --translate-y-content-hover: -1;
+
+  color: var(--color-hover-text);
+
+  &::before {
+    inset: pxToRem(var(--border-width), true);
+
+    background-color: var(--color-hover-background);
+    border-color: var(--color-hover-border);
+    box-shadow: pxToRem(var(--shadow-1-hover-offset-x))
+        pxToRem(var(--shadow-1-hover-offset-y))
+        pxToRem(var(--shadow-1-hover-blur))
+        pxToRem(var(--shadow-1-hover-spread)) var(--shadow-1-hover-color),
+      pxToRem(var(--shadow-2-hover-offset-x))
+        pxToRem(var(--shadow-2-hover-offset-y))
+        pxToRem(var(--shadow-2-hover-blur))
+        pxToRem(var(--shadow-2-hover-spread)) var(--shadow-2-hover-color);
+
+    @include ifForcedColors {
+      border-color: Highlight;
+    }
+  }
+}
+
+@mixin buttonActive {
+  &::before {
+    color: var(--color-active-text);
+    background-color: var(--color-active-background);
+    border-color: var(--color-active-border);
+  }
+}
+
+@mixin buttonLabelTransition {
+  transition: transform var(--transition-duration)
+    var(--transition-easing-function);
+  transform: translateY(#{pxToRem(var(--translate-y-content-hover, 0))});
+}
+
+@mixin buttonLabel {
+  display: block;
+  @include ellipsis;
 }
 
 @mixin buttonIcon {
   display: block;
-  width: pxToRem(var(--size-icon-ui-small));
-  height: pxToRem(var(--size-icon-ui-small));
+  width: pxToRem(var(--icon-size));
+  height: pxToRem(var(--icon-size));
   color: currentColor;
 }
-
-@mixin buttonFocusAndHover {
-  color: var(--color-hover-text);
-  background-color: var(--color-hover-background);
-  border-color: var(--color-hover-border);
-
-  box-shadow:
-    pxToRem(var(--shadow-1-hover-offset-x)) pxToRem(var(--shadow-1-hover-offset-y)) pxToRem(var(--shadow-1-hover-blur)) pxToRem(var(--shadow-1-hover-spread)) var(--shadow-1-hover-color),
-    pxToRem(var(--shadow-2-hover-offset-x)) pxToRem(var(--shadow-2-hover-offset-y)) pxToRem(var(--shadow-2-hover-blur)) pxToRem(var(--shadow-2-hover-spread)) var(--shadow-2-hover-color);
-}
-
-@mixin buttonActive {
-  color: var(--color-active-text);
-  background-color: var(--color-active-background);
-  border-color: var(--color-active-border);
-}
-
-
