fix: import paths have been fixed

--- a/src/components/sbb-autocomplete-item/styles/sbb-autocomplete-item.shared.scss
+++ b/src/components/sbb-autocomplete-item/styles/sbb-autocomplete-item.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-autocomplete-item/styles/sbb-autocomplete-item.component";
+@import "./sbb-autocomplete-item.component.scss";
 
 // Mode overrides/tests
 // :host {
