--- a/src/components/sbb-button/styles/sbb-button.default.scss
+++ b/src/components/sbb-button/styles/sbb-button.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-button/styles/sbb-button.component";
+@import "./sbb-button.component.scss";
 
 // Mode overrides/tests
 // :host {
