--- a/src/components/sbb-clock/styles/sbb-clock.shared.scss
+++ b/src/components/sbb-clock/styles/sbb-clock.shared.scss
@@ -13,6 +13,6 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-clock/styles/sbb-clock.component";
+@import "./sbb-clock.component.scss";
 
 // Mode overrides
