--- a/src/components/sbb-footer/styles/sbb-footer.shared.scss
+++ b/src/components/sbb-footer/styles/sbb-footer.shared.scss
@@ -13,4 +13,4 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-footer/styles/sbb-footer.component";
+@import "./sbb-footer.component.scss";
