--- a/src/components/sbb-grid/styles/sbb-grid.default.scss
+++ b/src/components/sbb-grid/styles/sbb-grid.default.scss
@@ -16,4 +16,4 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-grid/styles/sbb-grid.component";
+@import "./sbb-grid.component.scss";
