--- a/src/components/sbb-input-error/styles/sbb-input-error.shared.scss
+++ b/src/components/sbb-input-error/styles/sbb-input-error.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-input-error/styles/sbb-input-error.component";
+@import "./sbb-input-error.component.scss";
 
 // Mode overrides/tests
 // :host {
