--- a/src/components/sbb-logo/styles/sbb-logo.shared.scss
+++ b/src/components/sbb-logo/styles/sbb-logo.shared.scss
@@ -13,6 +13,6 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-logo/styles/sbb-logo.component";
+@import "./sbb-logo.component.scss";
 
 // Mode overrides
