--- a/src/components/sbb-pearl-chain/styles/sbb-pearl-chain.default.scss
+++ b/src/components/sbb-pearl-chain/styles/sbb-pearl-chain.default.scss
@@ -16,6 +16,6 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-pearl-chain/styles/sbb-pearl-chain.component";
+@import "./sbb-pearl-chain.component.scss";
 
 // Mode overrides
