--- a/src/components/sbb-stack/styles/sbb-stack.default.scss
+++ b/src/components/sbb-stack/styles/sbb-stack.default.scss
@@ -16,4 +16,4 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-stack/styles/sbb-stack.component";
+@import "./sbb-stack.component.scss";
