--- a/src/components/sbb-timetable-park-and-rail/styles/sbb-timetable-park-and-rail.shared.scss
+++ b/src/components/sbb-timetable-park-and-rail/styles/sbb-timetable-park-and-rail.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-park-and-rail/styles/sbb-timetable-park-and-rail.component";
+@import "./sbb-timetable-park-and-rail.component.scss";
 
 // Mode overrides/tests
 // :host {
