--- a/src/components/sbb-timetable-row-day-change/styles/sbb-timetable-row-day-change.shared.scss
+++ b/src/components/sbb-timetable-row-day-change/styles/sbb-timetable-row-day-change.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-row-day-change/styles/sbb-timetable-row-day-change.component";
+@import "./sbb-timetable-row-day-change.component.scss";
 
 // Mode overrides/tests
 // :host {
