--- a/src/components/sbb-timetable-row-header/styles/sbb-timetable-row-header.shared.scss
+++ b/src/components/sbb-timetable-row-header/styles/sbb-timetable-row-header.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-row-header/styles/sbb-timetable-row-header.component";
+@import "./sbb-timetable-row-header.component.scss";
 
 // Mode overrides/tests
 // :host {
