--- a/src/components/sbb-timetable-transportation-details/styles/sbb-timetable-transportation-details.shared.scss
+++ b/src/components/sbb-timetable-transportation-details/styles/sbb-timetable-transportation-details.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-transportation-details/styles/sbb-timetable-transportation-details.component";
+@import "./sbb-timetable-transportation-details.component.scss";
 
 // Mode overrides/tests
 // :host {
