--- a/src/components/sbb-accordion-item/styles/sbb-accordion-item.default.scss
+++ b/src/components/sbb-accordion-item/styles/sbb-accordion-item.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-accordion-item/styles/sbb-accordion-item.component";
+@import "./sbb-accordion-item.component.scss";
 
 // Mode overrides/tests
 // :host {
