--- a/src/components/sbb-accordion-item/styles/sbb-accordion-item.shared.scss
+++ b/src/components/sbb-accordion-item/styles/sbb-accordion-item.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-accordion-item/styles/sbb-accordion-item.component";
+@import "./sbb-accordion-item.component.scss";
 
 // Mode overrides/tests
 // :host {
