--- a/src/components/sbb-accordion/styles/sbb-accordion.default.scss
+++ b/src/components/sbb-accordion/styles/sbb-accordion.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-accordion/styles/sbb-accordion.component";
+@import "./sbb-accordion.component.scss";
 
 // Mode overrides/tests
 // :host {
