--- a/src/components/sbb-accordion/styles/sbb-accordion.shared.scss
+++ b/src/components/sbb-accordion/styles/sbb-accordion.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-accordion/styles/sbb-accordion.component";
+@import "./sbb-accordion.component.scss";
 
 // Mode overrides/tests
 // :host {
