--- a/src/components/sbb-autocomplete-item/styles/sbb-autocomplete-item.default.scss
+++ b/src/components/sbb-autocomplete-item/styles/sbb-autocomplete-item.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-autocomplete-item/styles/sbb-autocomplete-item.component";
+@import "./sbb-autocomplete-item.component.scss";
 
 // Mode overrides/tests
 // :host {
