--- a/src/components/sbb-autocomplete/styles/sbb-autocomplete.shared.scss
+++ b/src/components/sbb-autocomplete/styles/sbb-autocomplete.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-autocomplete/styles/sbb-autocomplete.component";
+@import "./sbb-autocomplete.component.scss";
 
 // Mode overrides/tests
 // :host {
