--- a/src/components/sbb-card-badge/styles/sbb-card-badge.default.scss
+++ b/src/components/sbb-card-badge/styles/sbb-card-badge.default.scss
@@ -16,4 +16,4 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-card-badge/styles/sbb-card-badge.component";
+@import "./sbb-card-badge.component.scss";
