--- a/src/components/sbb-card-badge/styles/sbb-card-badge.shared.scss
+++ b/src/components/sbb-card-badge/styles/sbb-card-badge.shared.scss
@@ -13,4 +13,4 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-card-badge/styles/sbb-card-badge.component";
+@import "./sbb-card-badge.component.scss";
