--- a/src/components/sbb-card-product/styles/sbb-card-product.default.scss
+++ b/src/components/sbb-card-product/styles/sbb-card-product.default.scss
@@ -16,4 +16,4 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-card-product/styles/sbb-card-product.component";
+@import "./sbb-card-product.component.scss";
