--- a/src/components/sbb-card-product/styles/sbb-card-product.shared.scss
+++ b/src/components/sbb-card-product/styles/sbb-card-product.shared.scss
@@ -13,4 +13,4 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-card-product/styles/sbb-card-product.component";
+@import "./sbb-card-product.component.scss";
