--- a/src/components/sbb-clock/styles/sbb-clock.default.scss
+++ b/src/components/sbb-clock/styles/sbb-clock.default.scss
@@ -16,6 +16,6 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-clock/styles/sbb-clock.component";
+@import "./sbb-clock.component.scss";
 
 // Mode overrides
