--- a/src/components/sbb-footer/styles/sbb-footer.default.scss
+++ b/src/components/sbb-footer/styles/sbb-footer.default.scss
@@ -16,4 +16,4 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-footer/styles/sbb-footer.component";
+@import "./sbb-footer.component.scss";
