--- a/src/components/sbb-grid/styles/sbb-grid.shared.scss
+++ b/src/components/sbb-grid/styles/sbb-grid.shared.scss
@@ -13,4 +13,4 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-grid/styles/sbb-grid.component";
+@import "./sbb-grid.component.scss";
