--- a/src/components/sbb-image/styles/sbb-image.default.scss
+++ b/src/components/sbb-image/styles/sbb-image.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-image/styles/sbb-image.component";
+@import "./sbb-image.component.scss";
 
 // Mode overrides/tests
 // :host {
