--- a/src/components/sbb-image/styles/sbb-image.shared.scss
+++ b/src/components/sbb-image/styles/sbb-image.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-image/styles/sbb-image.component";
+@import "./sbb-image.component.scss";
 
 // Mode overrides/tests
 // :host {
