--- a/src/components/sbb-input-error/styles/sbb-input-error.default.scss
+++ b/src/components/sbb-input-error/styles/sbb-input-error.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-input-error/styles/sbb-input-error.component";
+@import "./sbb-input-error.component.scss";
 
 // Mode overrides/tests
 // :host {
