--- a/src/components/sbb-journey-header/styles/sbb-journey-header.default.scss
+++ b/src/components/sbb-journey-header/styles/sbb-journey-header.default.scss
@@ -16,4 +16,4 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-journey-header/styles/sbb-journey-header.component";
+@import "./sbb-journey-header.component.scss";
