--- a/src/components/sbb-journey-header/styles/sbb-journey-header.shared.scss
+++ b/src/components/sbb-journey-header/styles/sbb-journey-header.shared.scss
@@ -13,4 +13,4 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-journey-header/styles/sbb-journey-header.component";
+@import "./sbb-journey-header.component.scss";
