--- a/src/components/sbb-link-list/styles/sbb-link-list.default.scss
+++ b/src/components/sbb-link-list/styles/sbb-link-list.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-link-list/styles/sbb-link-list.component";
+@import "./sbb-link-list.component.scss";
 
 // Mode overrides/tests
 // :host {
