--- a/src/components/sbb-link/styles/sbb-link.shared.scss
+++ b/src/components/sbb-link/styles/sbb-link.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-link/styles/sbb-link.component";
+@import "./sbb-link.component.scss";
 
 // Mode overrides/tests
 // :host {
