--- a/src/components/sbb-logo/styles/sbb-logo.default.scss
+++ b/src/components/sbb-logo/styles/sbb-logo.default.scss
@@ -16,6 +16,6 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-logo/styles/sbb-logo.component";
+@import "./sbb-logo.component.scss";
 
 // Mode overrides
