--- a/src/components/sbb-panel/styles/sbb-panel.default.scss
+++ b/src/components/sbb-panel/styles/sbb-panel.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-panel/styles/sbb-panel.component";
+@import "./sbb-panel.component.scss";
 
 // Mode overrides/tests
 // :host {
