--- a/src/components/sbb-panel/styles/sbb-panel.shared.scss
+++ b/src/components/sbb-panel/styles/sbb-panel.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-panel/styles/sbb-panel.component";
+@import "./sbb-panel.component.scss";
 
 // Mode overrides/tests
 // :host {
