--- a/src/components/sbb-pearl-chain/styles/sbb-pearl-chain.shared.scss
+++ b/src/components/sbb-pearl-chain/styles/sbb-pearl-chain.shared.scss
@@ -13,6 +13,6 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-pearl-chain/styles/sbb-pearl-chain.component";
+@import "./sbb-pearl-chain.component.scss";
 
 // Mode overrides
