--- a/src/components/sbb-section/styles/sbb-section.default.scss
+++ b/src/components/sbb-section/styles/sbb-section.default.scss
@@ -16,4 +16,4 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-section/styles/sbb-section.component";
+@import "./sbb-section.component.scss";
