--- a/src/components/sbb-section/styles/sbb-section.shared.scss
+++ b/src/components/sbb-section/styles/sbb-section.shared.scss
@@ -13,4 +13,4 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-section/styles/sbb-section.component";
+@import "./sbb-section.component.scss";
