--- a/src/components/sbb-signet/styles/sbb-signet.default.scss
+++ b/src/components/sbb-signet/styles/sbb-signet.default.scss
@@ -16,6 +16,6 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-signet/styles/sbb-signet.component";
+@import "./sbb-signet.component.scss";
 
 // Mode overrides
