--- a/src/components/sbb-signet/styles/sbb-signet.shared.scss
+++ b/src/components/sbb-signet/styles/sbb-signet.shared.scss
@@ -13,6 +13,6 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-signet/styles/sbb-signet.component";
+@import "./sbb-signet.component.scss";
 
 // Mode overrides
