--- a/src/components/sbb-slot-component/styles/sbb-slot-component.default.scss
+++ b/src/components/sbb-slot-component/styles/sbb-slot-component.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-slot-component/styles/sbb-slot-component.component";
+@import "./sbb-slot-component.component.scss";
 
 // Mode overrides/tests
 // :host {
