--- a/src/components/sbb-slot-component/styles/sbb-slot-component.shared.scss
+++ b/src/components/sbb-slot-component/styles/sbb-slot-component.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-slot-component/styles/sbb-slot-component.component";
+@import "./sbb-slot-component.component.scss";
 
 // Mode overrides/tests
 // :host {
