--- a/src/components/sbb-stack/styles/sbb-stack.shared.scss
+++ b/src/components/sbb-stack/styles/sbb-stack.shared.scss
@@ -13,4 +13,4 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-stack/styles/sbb-stack.component";
+@import "./sbb-stack.component.scss";
