--- a/src/components/sbb-teaser-hero/styles/sbb-teaser-hero.default.scss
+++ b/src/components/sbb-teaser-hero/styles/sbb-teaser-hero.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-teaser-hero/styles/sbb-teaser-hero.component";
+@import "./sbb-teaser-hero.component.scss";
 
 // Mode overrides/tests
 // :host {
