--- a/src/components/sbb-teaser-hero/styles/sbb-teaser-hero.shared.scss
+++ b/src/components/sbb-teaser-hero/styles/sbb-teaser-hero.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-teaser-hero/styles/sbb-teaser-hero.component";
+@import "./sbb-teaser-hero.component.scss";
 
 // Mode overrides/tests
 // :host {
