--- a/src/components/sbb-text-input/styles/sbb-text-input.shared.scss
+++ b/src/components/sbb-text-input/styles/sbb-text-input.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-text-input/styles/sbb-text-input.component";
+@import "./sbb-text-input.component.scss";
 
 // Mode overrides/tests
 // :host {
