--- a/src/components/sbb-timetable-barrier-free/styles/sbb-timetable-barrier-free.shared.scss
+++ b/src/components/sbb-timetable-barrier-free/styles/sbb-timetable-barrier-free.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-barrier-free/styles/sbb-timetable-barrier-free.component";
+@import "./sbb-timetable-barrier-free.component.scss";
 
 // Mode overrides/tests
 // :host {
