--- a/src/components/sbb-timetable-button/styles/sbb-timetable-button.default.scss
+++ b/src/components/sbb-timetable-button/styles/sbb-timetable-button.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-timetable-button/styles/sbb-timetable-button.component";
+@import "./sbb-timetable-button.component.scss";
 
 // Mode overrides/tests
 // :host {
