--- a/src/components/sbb-timetable-button/styles/sbb-timetable-button.shared.scss
+++ b/src/components/sbb-timetable-button/styles/sbb-timetable-button.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-button/styles/sbb-timetable-button.component";
+@import "./sbb-timetable-button.component.scss";
 
 // Mode overrides/tests
 // :host {
