--- a/src/components/sbb-timetable-cus-him/styles/sbb-timetable-cus-him.default.scss
+++ b/src/components/sbb-timetable-cus-him/styles/sbb-timetable-cus-him.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-timetable-cus-him/styles/sbb-timetable-cus-him.component";
+@import "./sbb-timetable-cus-him.component.scss";
 
 // Mode overrides/tests
 // :host {
