--- a/src/components/sbb-timetable-cus-him/styles/sbb-timetable-cus-him.shared.scss
+++ b/src/components/sbb-timetable-cus-him/styles/sbb-timetable-cus-him.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-cus-him/styles/sbb-timetable-cus-him.component";
+@import "./sbb-timetable-cus-him.component.scss";
 
 // Mode overrides/tests
 // :host {
