--- a/src/components/sbb-timetable-occupancy/styles/sbb-timetable-occupancy.shared.scss
+++ b/src/components/sbb-timetable-occupancy/styles/sbb-timetable-occupancy.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-occupancy/styles/sbb-timetable-occupancy.component";
+@import "./sbb-timetable-occupancy.component.scss";
 
 // Mode overrides/tests
 // :host {
