--- a/src/components/sbb-timetable-row-column-headers/styles/sbb-timetable-row-column-headers.shared.scss
+++ b/src/components/sbb-timetable-row-column-headers/styles/sbb-timetable-row-column-headers.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-row-column-headers/styles/sbb-timetable-row-column-headers.component";
+@import "./sbb-timetable-row-column-headers.component.scss";
 
 // Mode overrides/tests
 // :host {
