--- a/src/components/sbb-timetable-row-day-change/styles/sbb-timetable-row-day-change.default.scss
+++ b/src/components/sbb-timetable-row-day-change/styles/sbb-timetable-row-day-change.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-timetable-row-day-change/styles/sbb-timetable-row-day-change.component";
+@import "./sbb-timetable-row-day-change.component.scss";
 
 // Mode overrides/tests
 // :host {
