--- a/src/components/sbb-timetable-transportation-details/styles/sbb-timetable-transportation-details.default.scss
+++ b/src/components/sbb-timetable-transportation-details/styles/sbb-timetable-transportation-details.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-timetable-transportation-details/styles/sbb-timetable-transportation-details.component";
+@import "./sbb-timetable-transportation-details.component.scss";
 
 // Mode overrides/tests
 // :host {
