--- a/src/components/sbb-timetable-transportation-number/styles/sbb-timetable-transportation-number.shared.scss
+++ b/src/components/sbb-timetable-transportation-number/styles/sbb-timetable-transportation-number.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-transportation-number/styles/sbb-timetable-transportation-number.component";
+@import "./sbb-timetable-transportation-number.component.scss";
 
 // Mode overrides/tests
 // :host {
