--- a/src/components/sbb-timetable-transportation-time/styles/sbb-timetable-transportation-time.shared.scss
+++ b/src/components/sbb-timetable-transportation-time/styles/sbb-timetable-transportation-time.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-transportation-time/styles/sbb-timetable-transportation-time.component";
+@import "./sbb-timetable-transportation-time.component.scss";
 
 // Mode overrides/tests
 // :host {
