--- a/src/components/sbb-timetable-transportation-walk/styles/sbb-timetable-transportation-walk.shared.scss
+++ b/src/components/sbb-timetable-transportation-walk/styles/sbb-timetable-transportation-walk.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-transportation-walk/styles/sbb-timetable-transportation-walk.component";
+@import "./sbb-timetable-transportation-walk.component.scss";
 
 // Mode overrides/tests
 // :host {
