--- a/src/components/sbb-timetable-travel-hints/styles/sbb-timetable-travel-hints.default.scss
+++ b/src/components/sbb-timetable-travel-hints/styles/sbb-timetable-travel-hints.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-timetable-travel-hints/styles/sbb-timetable-travel-hints.component";
+@import "./sbb-timetable-travel-hints.component.scss";
 
 // Mode overrides/tests
 // :host {
