--- a/src/components/sbb-timetable-travel-hints/styles/sbb-timetable-travel-hints.shared.scss
+++ b/src/components/sbb-timetable-travel-hints/styles/sbb-timetable-travel-hints.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable-travel-hints/styles/sbb-timetable-travel-hints.component";
+@import "./sbb-timetable-travel-hints.component.scss";
 
 // Mode overrides/tests
 // :host {
