--- a/src/components/sbb-timetable/styles/sbb-timetable.shared.scss
+++ b/src/components/sbb-timetable/styles/sbb-timetable.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-timetable/styles/sbb-timetable.component";
+@import "./sbb-timetable.component.scss";
 
 // Mode overrides/tests
 // :host {
