--- a/src/components/sbb-title/styles/sbb-title.default.scss
+++ b/src/components/sbb-title/styles/sbb-title.default.scss
@@ -16,7 +16,7 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "src/components/sbb-title/styles/sbb-title.component";
+@import "./sbb-title.component.scss";
 
 // Mode overrides/tests
 // :host {
