--- a/src/components/sbb-title/styles/sbb-title.shared.scss
+++ b/src/components/sbb-title/styles/sbb-title.shared.scss
@@ -13,7 +13,7 @@
 //*****************************************************************************
 
 // Import component styles
-@import "src/components/sbb-title/styles/sbb-title.component";
+@import "./sbb-title.component.scss";
 
 // Mode overrides/tests
 // :host {
