feat: css rtl fix

--- a/src/components/lyne-toast/styles/lyne-toast.component.scss
+++ b/src/components/lyne-toast/styles/lyne-toast.component.scss
@@ -90,6 +90,7 @@
   gap: pxToRem(var(--spacing-fixed-4x));
   span.toast-text {
     color: var(--color-default-text);
+    flex-grow: 1;
   }
   .toast-icon {
     color: var(--color-default-text);
