fix: remove hover styles from non hoverable devices

--- a/src/components/lyne-button/styles/lyne-button.component.scss
+++ b/src/components/lyne-button/styles/lyne-button.component.scss
@@ -142,8 +142,10 @@
   }
 }
 
-.button:hover:not(:disabled) {
-  @include buttonHover;
+@media (hover: hover) {
+  .button:hover:not(:disabled) {
+    @include buttonHover;
+  }
 }
 
 .button:active:not(:disabled) {
