feat: refactor e minor improvements

--- a/src/components/lyne-tab-group/styles/lyne-tab-group.component.scss
+++ b/src/components/lyne-tab-group/styles/lyne-tab-group.component.scss
@@ -25,13 +25,30 @@
     -webkit-box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-cloud-default);
     -moz-box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-cloud-default);
     box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-cloud-default);
+    outline-offset: calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-2x)));
     color: var(--color-black-default);
     background-color: transparent;
     -webkit-tap-highlight-color: transparent;
+    -webkit-font-smoothing: antialiased;
+    user-select: none;
+    cursor: pointer;
     @include ellipsis;
     transition-duration: var(--animation-duration-4x);
     transition-timing-function: var(--animation-easing);
-    transition-property: color, background-color, box-shadow, padding-block;
+    transition-property: color, background-color, box-shadow, outline-offset, padding-block;
+  }
+
+  ::slotted(h1:hover),
+  ::slotted(h2:hover),
+  ::slotted(h3:hover),
+  ::slotted(h4:hover),
+  ::slotted(h5:hover),
+  ::slotted(h6:hover) {
+    background-color: var(--color-milk-default);
+    -webkit-box-shadow: 0 0 0 pxToRem(var(--border-width-2x)) var(--color-milk-default), 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-cloud-default);
+    -moz-box-shadow: 0 0 0 pxToRem(var(--border-width-2x)) var(--color-milk-default), 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-cloud-default);
+    box-shadow: 0 0 0 pxToRem(var(--border-width-2x)) var(--color-milk-default), 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-cloud-default);
+    padding-block: calc(pxToRem(var(--spacing-fixed-2x)) - pxToRem(var(--border-width-1x))) calc(pxToRem(var(--spacing-fixed-2x)) + pxToRem(var(--border-width-1x)));
   }
 
   ::slotted(h1:active),
@@ -40,10 +57,9 @@
   ::slotted(h4:active),
   ::slotted(h5:active),
   ::slotted(h6:active) {
-    -webkit-box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-black-default);
-    -moz-box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-black-default);
-    box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-black-default);
-    background-color: transparent;
+    -webkit-box-shadow: 0 0 0 pxToRem(var(--border-width-2x)) var(--color-milk-default), 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-black-default);
+    -moz-box-shadow: 0 0 0 pxToRem(var(--border-width-2x)) var(--color-milk-default), 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-black-default);
+    box-shadow: 0 0 0 pxToRem(var(--border-width-2x)) var(--color-milk-default), 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-black-default);
   }
 
   ::slotted(h1:focus-visible),
@@ -54,9 +70,15 @@
   ::slotted(h6:focus-visible) {
     outline: pxToRem(var(--border-width-1x)) solid var(--color-black-default);
     outline-offset: calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-2x)));
-    -webkit-box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-black-default);
-    -moz-box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-black-default);
-    box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-black-default);
+  }
+
+  ::slotted(h1:focus-visible:hover),
+  ::slotted(h2:focus-visible:hover),
+  ::slotted(h3:focus-visible:hover),
+  ::slotted(h4:focus-visible:hover),
+  ::slotted(h5:focus-visible:hover),
+  ::slotted(h6:focus-visible:hover) {
+    outline-offset: calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-2x)));
   }
 
   ::slotted(h1[active]),
@@ -68,6 +90,19 @@
     -webkit-box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-black-default);
     -moz-box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-black-default);
     box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-black-default);
+    background-color: var(--color-black-default);
+    color: var(--color-white-default);
+  }
+
+  ::slotted(h1[active]:hover),
+  ::slotted(h2[active]:hover),
+  ::slotted(h3[active]:hover),
+  ::slotted(h4[active]:hover),
+  ::slotted(h5[active]:hover),
+  ::slotted(h6[active]:hover) {
+    -webkit-box-shadow: 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-black-default);
+    -moz-box-shadow: 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-black-default);
+    box-shadow: 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-black-default);
     background-color: var(--color-black-default);
     color: var(--color-white-default);
   }
@@ -95,48 +130,6 @@
       border-bottom: pxToRem(var(--border-width-2x)) solid var(--color-platinum-default);
     }
   }
-
-  @media (hover: hover) { /* when supported */
-    ::slotted(h1:hover),
-    ::slotted(h2:hover),
-    ::slotted(h3:hover),
-    ::slotted(h4:hover),
-    ::slotted(h5:hover),
-    ::slotted(h6:hover) {
-      cursor: pointer;
-      background-color: var(--color-milk-default);
-      -webkit-box-shadow: 0 0 0 pxToRem(var(--border-width-2x)) var(--color-milk-default), 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-cloud-default);
-      -moz-box-shadow: 0 0 0 pxToRem(var(--border-width-2x)) var(--color-milk-default), 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-cloud-default);
-      box-shadow: 0 0 0 pxToRem(var(--border-width-2x)) var(--color-milk-default), 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-cloud-default);
-      padding-block: calc(pxToRem(var(--spacing-fixed-2x)) - pxToRem(var(--border-width-1x))) calc(pxToRem(var(--spacing-fixed-2x)) + pxToRem(var(--border-width-1x)));
-    }
-
-    ::slotted(h1[active]:hover),
-    ::slotted(h2[active]:hover),
-    ::slotted(h3[active]:hover),
-    ::slotted(h4[active]:hover),
-    ::slotted(h5[active]:hover),
-    ::slotted(h6[active]:hover) {
-      -webkit-box-shadow: 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-black-default);
-      -moz-box-shadow: 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-black-default);
-      box-shadow: 0 0 0 calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-1x))) var(--color-black-default);
-      background-color: var(--color-black-default);
-      color: var(--color-white-default);
-    }
-
-    ::slotted(h1[active]:focus-visible:hover),
-    ::slotted(h2[active]:focus-visible:hover),
-    ::slotted(h3[active]:focus-visible:hover),
-    ::slotted(h4[active]:focus-visible:hover),
-    ::slotted(h5[active]:focus-visible:hover),
-    ::slotted(h6[active]:focus-visible:hover) {
-      outline: pxToRem(var(--border-width-1x)) solid var(--color-black-default);
-      outline-offset: calc(pxToRem(var(--border-width-2x)) + pxToRem(var(--border-width-2x)));
-      -webkit-box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-black-default);
-      -moz-box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-black-default);
-      box-shadow: 0 0 0 pxToRem(var(--border-width-1x)) var(--color-black-default);
-    }
-  }
 }
 
 .tab-content {
@@ -144,12 +137,16 @@
   color: var(--color-iron-default);
   margin-top: pxToRem(var(--spacing-responsive-m));
   transition: height var(--animation-duration-4x) var(--animation-easing);
-  ::slotted(div) {
+  ::slotted(div),
+  ::slotted(section),
+  ::slotted(article) {
     opacity: 0;
     visibility: hidden;
     height: 0;
   }
-  ::slotted(div[active]) {
+  ::slotted(div[active]),
+  ::slotted(section[active]),
+  ::slotted(article[active]) {
     opacity: 1;
     visibility: visible;
     height: fit-content;
