--- a/src/components/lyne-link/styles/lyne-link.component.scss
+++ b/src/components/lyne-link/styles/lyne-link.component.scss
@@ -27,7 +27,9 @@
   word-break: break-word;
   fill: currentColor;
 
-  @include visibleFocus();
+  &:focus-visible {
+    @include focusOutline();
+  }
 
   @include ifForcedColors {
     fill: LinkText;
